[gd_scene load_steps=14 format=3 uid="uid://dfh32oqrosx0k"]

[ext_resource type="Script" uid="uid://4qhbeq6lrmvs" path="res://scripts/audio_interface.gd" id="1_bo8cj"]
[ext_resource type="Texture2D" uid="uid://cp73mpist35ka" path="res://assets/2d/hud/volumeKnobSheet.png" id="1_ntdjn"]
[ext_resource type="Texture2D" uid="uid://cctifqbh25qja" path="res://assets/2d/hud/sfx.png" id="3_d25t7"]
[ext_resource type="Texture2D" uid="uid://b3fpi48ie436g" path="res://assets/2d/hud/onOffButtonSheet.png" id="4_1b4en"]
[ext_resource type="Texture2D" uid="uid://10x86mhc0l4j" path="res://assets/2d/hud/Music.png" id="4_g2jyg"]
[ext_resource type="StyleBox" uid="uid://bqihrrqlvkr1e" path="res://styles/checkboxstyle.tres" id="4_i6ra6"]
[ext_resource type="Texture2D" uid="uid://vt8g4wsd5gf8" path="res://assets/2d/hud/slider.png" id="4_obu20"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d25t7"]
atlas = ExtResource("1_ntdjn")
region = Rect2(0, -0.017, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2jyg"]
atlas = ExtResource("1_ntdjn")
region = Rect2(20, -0.017, 20, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ntdjn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.2412, 0.3204, 0.36, 0.3372549)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2509804, 0.21176471, 0.22352941, 1)
corner_detail = 6

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_enx30"]
texture = ExtResource("4_obu20")
modulate_color = Color(0.19076231, 0.19076234, 0.19076231, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6ra6"]
atlas = ExtResource("4_1b4en")
region = Rect2(96, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b4en"]
atlas = ExtResource("4_1b4en")
region = Rect2(0, 0, 32, 20)

[node name="AudioInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bo8cj")

[node name="SFX_Volume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 87.0
offset_right = 230.0
offset_bottom = 108.69
theme_override_icons/grabber = SubResource("AtlasTexture_d25t7")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_g2jyg")
theme_override_styles/slider = SubResource("StyleBoxFlat_ntdjn")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_enx30")

[node name="Sfx" type="Sprite2D" parent="."]
position = Vector2(186, 20)
scale = Vector2(2, 2)
texture = ExtResource("3_d25t7")

[node name="Music_Volume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 87.0
offset_right = 101.0
offset_bottom = 108.69
theme_override_icons/grabber = SubResource("AtlasTexture_d25t7")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_g2jyg")
theme_override_styles/slider = SubResource("StyleBoxFlat_ntdjn")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_enx30")
value = 51.0

[node name="MusicCheckbox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 34.0
offset_right = 48.0
offset_bottom = 62.0
scale = Vector2(2, 2)
theme_override_styles/focus = ExtResource("4_i6ra6")
theme_override_icons/checked = SubResource("AtlasTexture_i6ra6")
theme_override_icons/unchecked = SubResource("AtlasTexture_1b4en")

[node name="SfxCheckbox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 34.0
offset_right = 181.0
offset_bottom = 62.0
scale = Vector2(2, 2)
theme_override_styles/focus = ExtResource("4_i6ra6")
theme_override_icons/checked = SubResource("AtlasTexture_i6ra6")
theme_override_icons/unchecked = SubResource("AtlasTexture_1b4en")

[node name="Music" type="Sprite2D" parent="."]
position = Vector2(50, 20)
scale = Vector2(2, 2)
texture = ExtResource("4_g2jyg")

[connection signal="drag_ended" from="SFX_Volume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="drag_ended" from="Music_Volume" to="." method="_on_music_volume_drag_ended"]
[connection signal="toggled" from="MusicCheckbox" to="." method="_on_music_checkbox_toggled"]
[connection signal="toggled" from="SfxCheckbox" to="." method="_on_sfx_checkbox_toggled"]
